fix some e
